[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
