[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.38"
dirs = "6.0.0"
flutter_rust_bridge = "=2.11.1"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "time", "process", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
